--- a/app/src/App.css
+++ b/app/src/App.css
@@ -37,7 +37,8 @@ body {
   background-size: 100%;
   background-repeat: no-repeat;
   background-position-y: 25%;
-  height: 40vw;
+  height: 50vw;
+  width: 100%;
 }
 
 .home-content {
@@ -51,12 +52,12 @@ body {
 }
 
 h1 {
-  font-size: 5rem;
+  font-size: 7vw;
 }
 a { 
   color:#d9e4dd;
   margin: 0 1vw;
-  font-size: 2rem;
+  font-size: 2vw;
   border: 2px solid #d9e4dd;
   border-radius: 5px;
   text-decoration: none;
@@ -101,6 +102,8 @@ p {
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
+  border-bottom: solid 5px #555555;
+  margin-bottom: 2vw;
 }
 
 .details {
